[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-once"
version = "0.1.0"
description = "Exactly-once execution for AI agent tool calls"
authors = [{name = "Henry Miller"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["ai", "agents", "idempotency", "llm", "tools"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
ledger = "ledger:_cli"

[tool.setuptools]
py-modules = ["ledger"]
